# Hyperspawn-Dropbear-Humanoid

./: README.md  edit_name.py
humanoidbatteryassembly_description/: CMakeLists.txt  package.xml
humanoidbatteryassembly_description/launch/: robot_description.launch.py
humanoidbatteryassembly_description/meshes/: 24ah-adapter_1.stl  5v-module__1__1.stl  Power_Converter_1.stl  base_link.stl  battery-board-adapter_1.stl  battery-frame-top_1.stl  naval_1.stl  power-module-large__2__1.stl  power-module-large__3__1.stl  power-module-large__4__1.stl  power-module-large__5__1.stl  power-module-large__6__1.stl  power-module-large__7__1.stl  power-module-large__9__1.stl
humanoidbatteryassembly_description/urdf/: humanoidbatteryassembly.trans  humanoidbatteryassembly.xacro  materials.xacro
humanoidhead_description/: CMakeLists.txt  package.xml
humanoidhead_description/launch/: robot_description.launch.py
humanoidhead_description/meshes/: u-joint-bolt-nub__1__1.stl
humanoidhead_description/urdf/: humanoidhead.trans  humanoidhead.xacro  materials.xacro
humanoidpelvicgirdle_description/: CMakeLists.txt  package.xml
humanoidrightarm_description/: CMakeLists.txt  package.xml
humanoidrightleg_description/: CMakeLists.txt  package.xml
humanoidtorso_description/: CMakeLists.txt  package.xml
hyperspawn_dropbear_control/: CMakeLists.txt  package.xml
hyperspawn_dropbear_control/hyperspawn_dropbear_control/: walking_node.py
hyperspawn_dropbear_control/launch/: hyperspawn_drobear_controlllers.launch.py
hyperspawn_dropbear_description/: CMakeLists.txt  package.xml
(+659 files in other folders)
